tidy up the folder structure

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        /* IE and Edge */
+        scrollbar-width: none;
+        /* Firefox */
+    }
+}
+
 body {
     font-family: 'Poppins', sans-serif;
 }
